--- a/estilo/style.css
+++ b/estilo/style.css
@@ -79,8 +79,8 @@ section.imagem{
 }
 
 section.imagem>p{
-    width: 500px;
-    display: inline-block;
+    width: 400px;
+    margin: auto;
     padding: 5px;
     background-color: #00000057;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.357);
