--- a/estilo/style.css
+++ b/estilo/style.css
@@ -60,9 +60,10 @@ a:hover{
 }
 
 main section{
+    padding-left: 10px;
     padding-top: 5vh;
     padding-bottom: 10vh;
-    font-size: 2.5vw;
+    font-size: 3vw;
     font-family: var(--fonte-texto);
     line-height: 2em;
 }
@@ -72,7 +73,7 @@ section.normal{
 }
 
 section.imagem{
-    background-color: rgba(0, 0, 0, 0.166);
+    background-color: rgba(0, 0, 0, 0.077);
     color: white;
     box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.521);
     background-size: cover;
